# MegaTunix

./: .cvsignore  .gitignore  AUTHORS  BUGS  CREDITS  ChangeLog  Doxyfile.in  INSTALL  LICENSE  Makefile.am  Makefile.in  MegaTunix.iss.in  MegaTunix.kdevprj  MegaTunix32.iss.in  MegaTunix32_dbg.iss.in  MegaTunix64.iss.in  MegaTunix64_dbg.iss.in  README  README.CVS  README.crosscompiling  README.git  README.md  RELEASE_NOTES  TODO  VERSION.in  WIN_NOTES.txt.in  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  gaugedesigner.iss.in  groups  libtool  megatunix.spec.in  mkinstalldirs  project.config
Gui/: .cvsignore  .gitignore  B_n_G_constants.datamap  B_n_G_constants.datamap.in  B_n_G_constants.glade  Dualtable-constants.datamap  Dualtable-constants.datamap.in  Dualtable-constants.glade  JimStim-0.x.datamap.in  JimStim-0.x.glade  JimStim-2.x.datamap.in  JimStim-2.x.glade  JimStim.datamap.in  JimStim.glade  Makefile.am  PIS-accel.glade  PIS-alpha_biar_16x10.datamap  PIS-alpha_biar_16x10.datamap.in  PIS-alpha_biar_16x10.glade  PIS-alpha_bpw_16x10.datamap  PIS-alpha_bpw_16x10.datamap.in  PIS-alpha_bpw_16x10.glade  PIS-biar_16x16.datamap  PIS-biar_16x16.datamap.in  PIS-biar_16x16.glade  PIS-boost_16x10.datamap  PIS-boost_16x10.datamap.in  PIS-boost_16x10.glade  PIS-bpw_16x16.datamap  PIS-bpw_16x16.datamap.in  PIS-bpw_16x16.glade  PIS-corrections.datamap  PIS-corrections.datamap.in  PIS-corrections.glade  PIS-ego_16x16.datamap  PIS-ego_16x16.datamap.in  PIS-ego_16x16.glade  PIS-runtime.datamap  PIS-runtime.datamap.in  PIS-runtime.glade  (+510 more)
LookupTables/: AEMWB.inc  CustomWB.inc  DIYWB.inc  InnoLC1_0_5V.inc  InnoLM1_0_5V.inc  InnoLM1_1_2V.inc  Makefile.am  NBafr100.inc  TEWBLin.inc  Uego1000WB.inc  barofactor4115.inc  barofactor4250.inc  cltfactor.inc  gm3800clt.inc  gm3800mat.inc  kpafactor.inc  kpafactor4115.inc  kpafactor4250.inc  kpafactorMPXH6400A.inc  matfactor.inc
RealtimeMaps/: .gitignore  B_and_G_1.x.rtv_map  B_and_G_2.0-3.01.rtv_map  BnG-Std.rtv_map  BnG-Std.rtv_map.in  BnG-std.rtv_map  DT-Std.rtv_map  DT-Std.rtv_map.in  DT-std.rtv_map  DualTable-Std.rtv_map.in  Dualtable-0.90.rtv_map  Dualtable-1.01.rtv_map  Dualtable-1.02.rtv_map  FreeEMS.rtv_map.in  FreeEMS.xml  Genboardv3.rtv_map  JimStim-2.x.rtv_map.in  JimStim-2.x.xml  LibreEMS.xml  MS1-BnG-Std.rtv_map  MS1-BnG-Std.rtv_map.in  MS1-BnG-Std.xml  MS1-DT-Std.rtv_map.in  MS1-DT-Std.xml  MS1-Extra-029x.rtv_map.in  MS1-Extra-029x.xml  MS1-Extra-HR-011d.rtv_map.in  MS1-Extra-HR-011d.xml  MS1-Extra-HR-08x.rtv_map.in  MS1-Extra-HR-08x.xml  MS2-2.905-Std.xml  MS2-Extra-2.0.x.rtv_map  MS2-Extra-2.0.x.rtv_map.in  MS2-Extra-2.1.0.rtv_map  MS2-Extra-2.1.0.rtv_map.in  MS2-Extra-2.1.0.xml  MS2-Extra-2.1.0i.rtv_map  MS2-Extra-2.1.0j.rtv_map  MS2-Extra-2.1.0p.rtv_map  MS2-Extra-2.1.x.rtv_map  (+38 more)
RuntimeSliders/: DT-firmware.rts_conf  DualTable.xml  FreeEMS.xml  JimStim-2.x-firmware.xml  JimStim-2.x.xml  LibreEMS.xml  MS1-Extra.xml  MS1-Std-firmware.rts_conf  MS1-Std.xml  MS2-Extra-firmware.rts_conf  MS2-Extra-firmware.xml  MS2-Extra.xml  MS2-Std-firmware.rts_conf  MS2-Std-firmware.xml  MS3-Extra.xml  MSnS-Extra-firmware.rts_conf  MSnS-Extra-firmware.xml  Makefile.am  PIS_V1_00-firmware.rts_conf  PIS_V1_00-firmware.xml  PIS_V1_00.xml  README  dt-firmware.rts_conf  genboard-firmware.rts_conf  msnedis-firmware.rts_conf  msns-extra-firmware.rts_conf  spark-firmware.rts_conf  std-firmware.rts_conf
RuntimeStatus/: .gitignore  FreeEMS.xml  JimStim-2.x-firmware.xml  JimStim-2.x.xml  LibreEMS.xml  MS1-Extra.xml  MS1-Std-firmware.status_conf  MS1-Std-firmware.status_conf.in  MS1-Std.xml  MS2-Extra-3.2.1.xml  MS2-Extra-ALS.xml  MS2-Extra-firmware.status_conf  MS2-Extra-firmware.status_conf.in  MS2-Extra-firmware.xml  MS2-Extra.xml  MS2-Std-firmware.status_conf.in  MS2-Std.xml  MS3-Extra.xml  MSnS-Extra-firmware.status_conf  MSnS-Extra-firmware.status_conf.in  MSnS-Extra-firmware.xml  Makefile.am  PIS_V1_00-firmware.status_conf  PIS_V1_00-firmware.status_conf.in  PIS_V1_00-firmware.xml  PIS_V1_00.xml  README  msns-e-firmware.status_conf  std-firmware.status_conf
RuntimeText/: DT-firmware.rtt_conf  DT-firmware.xml  FreeEMS.xml  JimStim-2.x-firmware.xml  JimStim-2.x.xml  LibreEMS.xml  MS1-Std-firmware.rtt_conf  MS1-Std.xml  MS2-2.905-Std.xml  MS2-Extra-3.2.1.xml  MS2-Extra-firmware.rtt_conf  MS2-Extra-firmware.xml  MS2-Extra.xml  MS2-Std-firmware.rtt_conf  MS2-Std-firmware.xml  MS3-Extra.xml  MSnS-Extra-firmware.rtt_conf  MSnS-Extra.xml  Makefile.am  PIS_V1_00-firmware.xml  PIS_V1_00.xml  README  msns-extra-firmware.rtt_conf  spark-firmware.rtt_conf  std-firmware.rtt_conf
dashdesigner/: .cvsignore  .gitignore  Makefile.am  dashdesigner.c  dashdesigner.glade  events.c  events.h  loadsave.c  loadsave.h  main.c  main.glade  main.ui  menu_handlers.c  menu_handlers.h  preview.glade  propeditor.glade  resources.rc.in  rtv_parser.c  rtv_parser.h  xml.c  xml.h
ecu_snapshots/: BnG-2.986  JimStim_v0.x.ecu  JimStim_v2.x.ecu  MS-II-Extra_V2.1.0-series.ecu  MS-II-Extra_V2.1.0e-series.ecu  MS-II-Extra_V3.0.3w_series.ecu  MS-II-Extra_V3.0.x-series.ecu  MS-II-Extra_V3.1.0_series.ecu  MS-II_V2.8x-series.ecu  MS-Projection-0.81  MS1-BnG-V1.x.ecu  MS1-BnG-V3.x.ecu  MS1-BnG.ecu  MS1-DT-Std.ecu  MS1-Extra_029-series.ecu  MS1-Extra_029y-series.ecu  MS1-Extra_Highres_010x-series.ecu  MS1-Extra_Highres_011[ab]-series.ecu  MS1-Extra_Highres_011d-series.ecu  MS1-Extra_Highres_0[89]x-series.ecu  MS2-Extra_V2.1.0-series.ecu  MS2-Extra_V2.1.0e-series.ecu  MS2-Extra_V3.0.3w_series.ecu  MS2-Extra_V3.0.3y_series.ecu  MS2-Extra_V3.0.x-series.ecu  MS2-Extra_V3.1.0_series.ecu  MS2-Extra_V3.1.1_17_series.ecu  MS2-Extra_V3.1.x.ALS.ecu  MS2-Extra_V3.2.1.ecu  MS2-Extra_V3.2.4.ecu  MS2-Extra_V3.2.5.ecu  MS2_V2.8x-series.ecu  MS3-Extra_V1.0.0.ecu  MSnEDIS-3.008  MSnS-E-029q+-Series  MSnS-E-029t  MSnS-E-HR-08g5  MSnS-Extra-HighRes-09a  MSnSpark-3.0.1  Makefile.am  (+8 more)
gaugedesigner/: .cvsignore  .gitignore  Makefile.am  README  a_range.glade  a_range.ui  alerts.c  alerts.h  binreloc.h  events.c  events.h  gaugedesigner.glade  gd_init.c  gd_init.h  getfiles.c  (+23 more)
(+1067 files in other folders)
