dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main.c)
AC_PREREQ(2.54)

MEGATUNIX_MAJOR_VERSION=0
MEGATUNIX_MINOR_VERSION=2
MEGATUNIX_MICRO_VERSION=1

MEGATUNIX_VERSION=$MEGATUNIX_MAJOR_VERSION.$MEGATUNIX_MINOR_VERSION.$MEGATUNIX_MICRO_VERSION

AC_CONFIG_SUBDIRS(src/main.c)
AM_INIT_AUTOMAKE(megatunix, $MEGATUNIX_VERSION)
#AC_CONFIG_HEADERS(config.h)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC
AC_PROG_MAKE_SET

dnl check paths for necessary files
dnl pkg_modules="gtk+-2.0 gthread-2.0 libgnomecanvas-2.0 gtkglext-1.0"
pkg_modules="gtk+-2.0 gthread-2.0 gtkglext-1.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Checks for header files.
AC_HEADER_TIME
AC_HEADER_STDC
AC_CHECK_HEADERS(endian.h string.h errno.h sys/poll.h sys/stat.h sys/types.h termios.h fcntl.h sys/ioctl.h sys/time.h unistd.h )

dnl optimizations
CFLAGS="-O2"
AC_SUBST(CFLAGS)

EXTRA_LIBS=""
AC_SUBST(EXTRA_LIBS)


dnl ===============
dnl Debugging stuff
dnl ===============

dnl General Debugging code
AC_ARG_ENABLE(debug,
[  --enable-debug         enable debugging [default=no]],, enable_debug=no)

if test "$enable_debug" = yes; then
DFLAGS="$DFLAGS -g -DDEBUG"
fi
AC_SUBST(DFLAGS)

dnl OpenGL Debugging code
AC_ARG_ENABLE(gldebug,
[  --enable-gldebug         enable OpenGL debugging [default=no]],, enable_gldebug=no)

if test "$enable_gldebug" = yes; then
DFLAGS="$DFLAGS -g -DGLDEBUG"
fi
AC_SUBST(DFLAGS)

dnl ==============
dnl profiling
dnl =============

AC_ARG_ENABLE(profiling,
[  --enable-profiling     enable profiling ],, enable_profiling=no)

if test "$enable_profiling" = yes; then
PFLAGS="-pg"
fi
AC_SUBST(PFLAGS)

dnl ==============
dnl Output files for build
dnl ==============

AC_SUBST(MEGATUNIX_MAJOR_VERSION)
AC_SUBST(MEGATUNIX_MINOR_VERSION)
AC_SUBST(MEGATUNIX_MICRO_VERSION)
AC_SUBST(MEGATUNIX_VERSION)
AC_OUTPUT([
Makefile 
src/Makefile
include/Makefile
VERSION])

echo "
Configuration:

    Install Path:                       ${prefix}
    General Debugging:                  ${enable_debug}
    OpenGL Debugging:                   ${enable_gldebug}
    Profiling:                          ${enable_profiling}
"
