dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main.c)
AC_PREREQ(2.54)

MEGATUNIX_MAJOR_VERSION=0
MEGATUNIX_MINOR_VERSION=4
MEGATUNIX_MICRO_VERSION=6

MEGATUNIX_VERSION=$MEGATUNIX_MAJOR_VERSION.$MEGATUNIX_MINOR_VERSION.$MEGATUNIX_MICRO_VERSION

AC_CONFIG_SUBDIRS(src/main.c)
AM_INIT_AUTOMAKE(megatunix, $MEGATUNIX_VERSION)
#AC_CONFIG_HEADERS(config.h)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CC
AC_PROG_MAKE_SET

dnl check paths for necessary files
dnl pkg_modules="gtk+-2.0 gthread-2.0 libgnomecanvas-2.0 gtkglext-1.0"
pkg_modules="gtk+-2.0 gthread-2.0 gtkglext-1.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Checks for header files.
AC_HEADER_TIME
AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h fcntl.h stdio.h string.h sys/poll.h sys/stat.h sys/types.h sys/ioctl.h sys/time.h termios.h unistd.h )

dnl optimizations
CFLAGS="-O2"
AC_SUBST(CFLAGS)

EXTRA_LIBS=""
AC_SUBST(EXTRA_LIBS)

dnl =================
dnl big/little endian
dnl =================
AC_C_BIGENDIAN(,,)


dnl ===============
dnl Debugging stuff
dnl ===============

dnl General Debugging code
AC_ARG_ENABLE(debug,
[  --enable-debug         enable debugging [default=no]],, enable_debug=no)

if test "$enable_debug" = yes; then
DEBUG_FLAGS="$DEBUG_FLAGS -g -DDEBUG"
fi
AC_SUBST(DEBUG_FLAGS)

dnl OpenGL Debugging code
AC_ARG_ENABLE(gldebug,
[  --enable-gldebug         enable OpenGL debugging [default=no]],, enable_gldebug=no)

if test "$enable_gldebug" = yes; then
DEBUG_FLAGS="$DEBUG_FLAGS -g -DGLDEBUG"
fi
AC_SUBST(DEBUG_FLAGS)

dnl ==============
dnl profiling
dnl =============

AC_ARG_ENABLE(profiling,
[  --enable-profiling     enable profiling ],, enable_profiling=no)

if test "$enable_profiling" = yes; then
PROF_FLAGS="-pg"
fi
AC_SUBST(PROF_FLAGS)

dnl ==============
dnl Output files for build
dnl ==============

plugindir=$libdir/MegaTunix
AC_SUBST(plugindir)
pluginsubs="\\\"Interrogator\\\""
INTERROGATOR_PLUGIN_DIR=Interrogator
AC_SUBST(INTERROGATOR_PLUGIN_DIR)
AC_SUBST(pluginsubs)

MEGATUNIX_DEFINES="$CFLAGS -DPLUGIN_DIR=\\\"$plugindir\\\" -DPLUGINSUBS=$pluginsubs -DGTK_DISABLE_COMPAT_H -DGDK_DISABLE_DEPRECATED -D_MAJOR_=$MEGATUNIX_MAJOR_VERSION -D_MINOR_=$MEGATUNIX_MINOR_VERSION -D_MICRO_=$MEGATUNIX_MICRO_VERSION "

AC_SUBST(MEGATUNIX_DEFINES)

dnl AC_SUBST(MEGATUNIX_MAJOR_VERSION)
dnl (MEGATUNIX_MINOR_VERSION)
dnl (MEGATUNIX_MICRO_VERSION)
dnl (MEGATUNIX_VERSION)
AC_OUTPUT([
Makefile 
src/Makefile
include/Makefile
Interrogator/Makefile
Interrogator/Profiles/Makefile
VERSION])

echo "
Configuration:

    Install Path:                       ${prefix}
    General Debugging:                  ${enable_debug}
    OpenGL Debugging:                   ${enable_gldebug}
    Profiling:                          ${enable_profiling}
"
